--- a/_posts/2016-04-26-01-hello-world.markdown
+++ b/_posts/2016-04-26-01-hello-world.markdown
@@ -85,6 +85,12 @@ $ cd softech_prog
 - これからC言語のソースコードを作成していく。
 - ソースコードは、C言語のルールにしたがって書かれたコンピュータへの指示書のようなもの。
 - テキストエディタを使って、ソースコードを書く。
+- あとから読みやすいコードを書くよう心がける。
+  * 処理のまとまりごとに空行をあける。
+  * インデント（字下げ）
+
+以下のソースコードをエディタを使って入力し、保存しよう。
+ファイル名は、 **hello.c** とする。
 
 {% highlight c linenos %}
 #include <stdio.h>
@@ -95,7 +101,13 @@ int main(void) {
 }
 {% endhighlight %}
 
+
 ### コンパイルして実行してみる
+
+- gccというコンパイラを使ってコンパイルする。
+  * プログラムができる
+- ./helloでプログラムを実行
+- 以下のコマンドを、TeraTermを通じてコマンドラインに入力する。（$マークは無視する。
 
 {% highlight shell %}
 $ gcc -o hello hello.c
