for文の解説画像を追加

--- a/_posts/2016-07-14-09-loop01.markdown
+++ b/_posts/2016-07-14-09-loop01.markdown
@@ -46,6 +46,11 @@ int main(void)
 | 3         	| 成立する    	| i = 4 	| 繰り返す → 3回目繰り返す	|
 | 4         	| 成立しない  	| i = 4 	| 終わる                   |
 
+
+for文の流れを図に表すと、このようになります。
+![for文図解]({{site.baseurl}}/images/for.png)
+
+
 ## 2重for文
 繰り返しの中では、さらに繰り返しをすることができます。これを使うと、簡単にかけ算九九を計算することが出来ます。実際にやってみましょう。ファイル名は、kuku.cとします。
 
