--- a/_posts/2016-07-14-10-loop02.markdown
+++ b/_posts/2016-07-14-10-loop02.markdown
@@ -7,40 +7,20 @@ date:   2016-07-14 10:00:00 +0900
 
 力尽きたのでまた来週書きます
 
-<!--
 # while文
-while文でもfor文と同じことが出来ますが、繰り返す条件が繰り返し回数とは限りません。条件が成立する間、ブロックの中を繰り返します。
+while文でもfor文と同様に、繰り返し処理を行うことが出来ます。for文との違いは、繰り返す条件が繰り返し回数とは限らない、ということです。
 
+while文は、ある条件が成立する間、ブロックの中を繰り返します。これは、何会繰り返したらよいのかわからない場合にも便利です。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-for文は、回数をカウントしながら、繰り返して同じことをするための文です。通常、繰り返した回数を数えるための変数（カウンタ変数）を用意して処理を行います。
 
 ```
-for (カウンタに初期値を代入; 繰り返すための条件; 回数のカウント) {
-    文1;
-    文2;
+while(条件) {
+        文1;
+        文2;
 }
 ```
 
-for文の流れは、実際にC言語のソースコードを見た後のほうがわかりやすいと思いますので、先にコードを見ていきましょう。ファイル名は、for.cとします。
+それでは、実際にC言語でwhile文を使ってみましょう。ファイル名は、while.cとします。
 
 {% highlight c linenos %}
 #include <stdio.h>
@@ -49,24 +29,33 @@ int main(void)
 {
         int i;
 
-        for (i = 1; i <= 3; i++) {
+        i = 1;
+
+        while (i <= 3) {
                 printf("%d\n", i);
+                i++;
         }
 
         return 0;
 }
 {% endhighlight %}
 
-この時の処理の流れを表にすると、このようになります。
 
-| 変数iの値 	| 条件 i &lt;= 3| i++   	| 内容                     |
-| 1         	| 成立する    	| i = 2 	| 繰り返す→1回目繰り返す  	|
-| 2         	| 成立する    	| i = 3 	| 繰り返す → 2回目繰り返す	|
-| 3         	| 成立する    	| i = 4 	| 繰り返す → 3回目繰り返す	|
-| 4         	| 成立しない  	| i = 4 	| 終わる                   |
+# do-while文
+do-while文は、while文とほぼ同じです。違いは、**while文が繰り返しの条件を最初に書くのに対して、do-while文は最後に繰り返しの条件を書く**ということです。
 
-## 2重for文
-繰り返しの中では、さらに繰り返しをすることができます。これを使うと、簡単にかけ算九九を計算することが出来ます。実際にやってみましょう。ファイル名は、kuku.cとします。
+つまり、do-while文では、条件が成立しなくても、1回はブロック内の処理が実行されます。
+
+```
+do {
+        文1;
+        文2;
+} while(条件);
+```
+
+do-while文は、while文と違いブロックの最後の中括弧にセミコロンが必要なので、忘れないようにしてください。
+
+それでは、do-while文を使ったコードを書いてみましょう。ファイル名は、do-while.cとします。
 
 {% highlight c linenos %}
 #include <stdio.h>
@@ -74,48 +63,60 @@ int main(void)
 int main(void)
 {
         int i;
-        int j;
+        i = 1;
 
-        for (i = 1; i <= 9; i++) {
-                for (j = 1; j <= 9; j++) {
-                        printf("%d * %d = %02d\n", i, j, i * j);
-                }
-        }
-        return 0;
-}
-{% endhighlight %}
+        do {
+                printf("%d\n", i);
+                i++;
+        } while(i <= 3);
 
-## for文の中のif文
-また、for文の中にif文を組み込むこともできます。
-
-以下のコードを見てみましょう。1から20までの数字を出力し、奇数であれば（奇数）と表示し、そうでなければただ改行するプログラムです。ファイル名は、odd.cとします。
-
-{% highlight c linenos %}
-#include <stdio.h>
-
-int main(void)
-{
-        int i;
-
-        for (i = 1; i <= 20; i++) {
-                printf("%d", i);
-
-                if (i % 2 == 0) {
-                        printf("\n");
-                } else {
-                        printf("（奇数）\n");
-                }
-        }
         return 0;
 }
 {% endhighlight %}
 
 
-## 練習問題
+# while文とdo-while文の違い
+while文とdo-while文の違いは、上で書いたプログラムの変数iの初期化部分を、以下のように変更して実行してみると感覚がつかめると思います。
 
-### 1. かけ算九九の改良
-かけ算九九のプログラムを改良し、各段の最初に「1の段」などと表示するようにしましょう。ファイル名は、kuku2.cとします。
+```
+int i;
+i = 1;
+```
 
-### 2. 世界のナベアツ
-1から100までの整数をカウントし、3の倍数であればアホになるプログラムを作成しなさい。ファイル名は、aho.cとします。（3のつく整数の時の対応はしなくて良い）
--->
+を、
+
+```
+int i;
+i = 4;
+```
+
+に変更してから、　while.cとdo-while.cを再コンパイルし、実行してみる。
+
+
+# 練習問題
+## 1. 2,4,6,8と表示するプログラム
+while文またはdo-while文を使って、次のように画面に出力するコードを書いてください。ファイル名は、step.cとします。
+
+```
+2
+4
+6
+8
+```
+
+## 総和プログラム
+while文またはdo-while文を使って、キーボードから入力された数字の総和を求めるプログラムを作りなさい。ただし、0が入力された時点でキーボードからの入力を終了し、その時点での合計を出力することとします。
+
+例：
+
+```
+1
+10
+2
+-1
+-5
+0
+
+合計は、7です。
+```
+
