--- a/_posts/2016-10-14-11-array.markdown
+++ b/_posts/2016-10-14-11-array.markdown
@@ -81,39 +81,86 @@ a[1] = 2
 a[2] = 3
 ```
 
-私達人間は通常1から数字を数えますが、C言語の配列は0から数えると覚えておいてください。
+![配列]({{site.baseurl}}/images/array.png)
+
+私達人間は通常1から数字を数えますが、C言語の配列の添え字は0から数えると覚えておいてください。
 
 
 # 配列と繰り返し
+配列は、先日学んだ繰り返し、特にfor文と相性が良いです。
+
+以下のコードを書いてみてください。ファイル名は、11_for_array.cとします。
+
+{% highlight c linenos %}
+#include <stdio.h>
+
+int main(void)
+{
+        int i;
+        int point[5];
+
+        point[0] = 4;
+        point[1] = 0;
+        point[2] = 2;
+        point[3] = 5;
+        point[4] = 1;
 
 
+        for (i = 0; i < 5; i++) {
+                printf("point[%d]: %d\n", i, point[i]);
+        }
+
+        return 0;
+}
+{% endhighlight %}
+
+このように、配列の要素を順番に参照したい時に、for文が便利です。
+
+
+# 2次元配列
+配列は、横だけでなく縦にも並べることができます。このような配列を2次元配列といいます。
+
+2次元配列を使ったプログラム例をみてみましょう。ファイル名は、11_kuku.cとします。
+
+{% highlight c linenos %}
+#include <stdio.h>
+
+int main(void)
+{
+        int i, j;
+        int a[9][9];
+
+        for (i = 0; i < 9; i++) {
+                for (j = 0; j < 9; j++) {
+                        a[i][j] = (i + 1) * (j + 1);
+                }
+        }
+
+        for (i = 0; i < 9; i++) {
+                for (j = 0; j < 9; j++) {
+                        printf("%3d", a[i][j]);
+                }
+                printf("\n");
+        }
+
+        return 0;
+}
+{% endhighlight %}
+
+このように、2次元配列は表や面のように広がるデータを扱うのに便利です。
+
+さらに、3次元配列、4次元配列とありますが、今回は省略します。
 
 
 # 練習問題
-## 1. 2,4,6,8と表示するプログラム
-while文またはdo-while文を使って、次のように画面に出力するコードを書いてください。ファイル名は、step.cとします。
+次のように画面に出力するコードをint型の配列a[]と繰り返しを使って書いてください。ファイル名は、11_ren1.cとします。
 
 ```
-2
-4
-6
-8
+a[0] = 0
+a[1] = 20
+a[2] = 40
+a[3] = 60
+a[4] = 80
+a[5] = 100
 ```
 
-## 総和プログラム
-while文またはdo-while文を使って、キーボードから入力された数字の総和を求めるプログラムを作りなさい。ただし、0が入力された時点でキーボードからの入力を終了し、その時点での合計を出力することとします。
-
-例：
-
-```
-1
-10
-2
--1
--5
-0
-
-合計は、7です。
-```
-
--->
