--- a/_posts/2016-11-14-12-function.markdown
+++ b/_posts/2016-11-14-12-function.markdown
@@ -42,17 +42,6 @@ printf("こんにちは。\n");
 - 数学関数 math.h
 - 時間関数 time.h
 
-# 関数についてもう少し
-
-## イメージと用語の定義
-
-
-## 関数の宣言
-
-
-## 関数の呼び出し方
-
-
 # 自分で関数を作ってみる
 
 予め用意されている関数を「標準ライブラリ関数」と言いましたが、自分で作る関数の事は「 **ユーザ関数** 」だとか「 **自作関数** 」といいます。
@@ -129,7 +118,7 @@ return x + y;
 #include <stdio.h>
 
 // Hello! と決まりきった文字列を出力するだけなので引数も返り値もいらない。
-int sayHello()
+void sayHello()
 {
         printf("Hello!\n");
 }
@@ -257,9 +246,6 @@ int main(void)
         return 0;
 }
 ```
-
-
-
 
 
 ## yourName()関数を作る
