仕様の修正

--- a/_posts/2017-03-13-15-Olympic.markdown
+++ b/_posts/2017-03-13-15-Olympic.markdown
@@ -16,7 +16,7 @@ date:   2017-03-13 00:00:00 +0900
 ### 仕様
 
 - 西暦を入力すると、その年に開催されたオリンピックが第何回だったのかを出力するプログラムを作成せよ。
-- 入力された年にオリンピックが開催されていない場合はその旨を表示し、その後に開催されるすべてのオリンピックと、それが何年後なのかを出力せよ。
+- 入力された年にオリンピックが開催されていない場合はその旨を表示し、その次に開催されるオリンピックについて出力せよ。
 - 想定される入力は、1896から2020とする。
 
 ### メモ
