--- a/_posts/2017-03-13-15-Olympic.markdown
+++ b/_posts/2017-03-13-15-Olympic.markdown
@@ -39,3 +39,11 @@ date:   2017-03-13 00:00:00 +0900
 ### 実行例
 
 ![オリンピックの開催年を出力するプログラムの実行例]({{ site.baseurl }}/images/ol.png)
+
+
+### ソースコードの例
+
+函館の有名なすき焼き屋「阿佐利 本店」のすきやき弁当。
+
+![阿佐利本店 すきやき弁当]({{ site.baseurl }}/images/sukiyaki.jpg)
+
