--- a/_posts/2017-03-13-15-Olympic.markdown
+++ b/_posts/2017-03-13-15-Olympic.markdown
@@ -28,6 +28,11 @@ date:   2017-03-13 00:00:00 +0900
     * 開催されなかった場合もオリンピアードの回数はカウントされるので注意。
         - 例: 1916年の第6回は開催されなかったが、1920年のオリンピックは第7回となる。
 
+### 元ネタ
+
+[プログラミングスレまとめ in VIP](http://vipprog.net/wiki/)より、[オリンピックの開催年を出力するプログラム](http://vipprog.net/wiki/exercise.html#o373ec6d)を元に改変しました。
+
+
 ### 提出方法
 
 - [こちら](https://www.dropbox.com/request/3wD03P38ffQHQYc5Kv1X)からどうぞ。
@@ -42,6 +47,57 @@ date:   2017-03-13 00:00:00 +0900
 
 
 ### ソースコードの例
+
+上記の実行例は、以下のコードをコンパイル・実行したものです。
+
+オリンピック開催回数分の配列を用意し、添字を開催回、要素を開催年としました。  
+（例: years[1] = 1900は第2回 1900年を表す。配列の添字は0から始まるのでyears[1]は第2回を表すことに注意！）
+
+years[i]の要素がinputより小さくなった時点でループ終了。なお、開催されなかった回の年の要素は-1で上書きしています。
+
+人によっては、「1944年の第13回は第二次世界大戦により開催されませんでした。」という風に、開催されなかった理由を出力している場合もあったので、そういう場合は素直にif文でやっていくほうがよさそう。
+
+{% highlight c linenos %}
+#include <stdio.h>
+
+int main(void)
+{
+        int years[32];
+        int year;
+        int input;
+        int count = 1;
+        int i;
+
+        for (i = 0; i < 32; i++) {
+                years[i] = 1896 + i * 4;
+                if (years[i] == 1916 || years[i] == 1940 || years[i] == 1944) {
+                        years[i] = -1;
+                }
+        }
+
+        printf("西暦を入力\n--> ");
+        scanf("%d", &input);
+
+        if (input < 1896 || input > 2020) {
+                printf("不正な入力です。\n");
+        } else {
+                for (i = 0; i < 32; i++) {
+                        if (input == years[i]) {
+                                printf("%d年開催のオリンピックは第%02d回です。\n", input, i + 1);
+                                break;
+                        } else if (input < years[i]) {
+                                printf("%d年にはオリンピックは開催されていません。\n", input);
+                                printf("次のオリンピックは、第%02d回（%04d年）です。\n", i + 1, 1896 + i * 4);
+                                break;
+                        }
+                }
+        }
+
+        return 0;
+}
+{% endhighlight %}
+
+### おまけ
 
 函館の有名なすき焼き屋「阿佐利 本店」のすきやき弁当。
 
